[package]
name = "buf-read-ext"
version = "0.3.0"
description = "Trait extending anything that implements BufRead with stream_until_token()"
authors = ["Mike Dilger <mike@optcomp.nz>"]
readme = "README.md"
repository = "https://github.com/mikedilger/buf-read-ext"
documentation = "https://docs.rs/buf-read-ext"
license = "MIT OR Apache-2.0"

[features]
default = [ "async" ]
async = [ "futures", "tokio-io" ]

[dependencies]
futures = { version = "0.1", optional = true }
tokio-io = { version = "0.1", optional = true }
